@@ -37,7 +37,7 @@ dependencies {
     implementation(libs.reorderable)
     implementation(libs.platformtools.darkmodedetector)
     implementation(libs.jna)
-    api("io.github.kevinnzou:compose-webview-multiplatform:2.0.3")
+    implementation("it.sauronsoftware:junique:1.0.4")
 }
 
 compose.desktop {
@@ -85,7 +85,7 @@ compose.desktop {
                 iconFile.set(project.file("resources/ic_launcher.ico"))
             }
             linux {
-
+                iconFile.set(project.file("resources/ic_launcher.png"))
             }
             appResourcesRootDir.set(file("resources"))
         }
@@ -196,14 +196,4 @@ kotlin {
 
 tasks.named("compileKotlin") {
     dependsOn(generateSupportedLocales)
-}
-
-// if is linux
-if (System.getProperty("os.name").contains("Linux")) {
-    afterEvaluate {
-        tasks.withType<JavaExec> {
-            jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
-            jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
-        }
-    }
 }
